@@ -1,3 +1,8 @@
+Mon May 11 14:23:49 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* flax/searchserver/backends/base_backend.py: Fix parameter name,
+	  and add base class for similarity searches.
+
 Mon May 11 14:10:10 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* flax/searchserver/backends/__init__.py: Remove some debugging
